--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,12 +1,30 @@
-name: 🦕 Deploy Docusaurus to GitHub Pages
-on: [push]
+name: "Docusaurus 🦖 GitHub Pages"
+
+on:
+  workflow_dispatch:
+  push:
+    branches: [main]
 
 jobs:
-  deploy:
+  publish:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
-      - uses: docuactions/github-pages@main
-        env:
-          DOCUACTIONS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DOCUACTIONS_DEPLOYMENT: ${{ secrets.DOCUACTIONS_DEPLOYMENT }}
+      - name: Code Checkout
+        uses: actions/checkout@v4.1.1
+
+      - name: Set up Node
+        uses: actions/setup-node@v4.0.2
+        with:
+          node-version: 21
+      
+      - name: Build Docusaurus website
+        run: |
+          npm install 
+          npm run build
+
+      - name: Deploy
+        if: success()
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
